# kubiq

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  justfile
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: documentation_policy.md  overview.md
docs/architecture/: data_flow.md  design_principles.md  module_structure.md  system_overview.md
docs/archive/plans/: mvp_plan.md  v0_2_0_plan.md
docs/development/: coding_guidelines.md  error_handling.md  setup.md  testing.md  workflow.md
docs/execution/: evaluation.md  path_resolution.md  query_plan.md
docs/k8s/: discovery.md  dynamic_objects.md  resource_resolution.md
docs/plans/: milestones.md  mvp_plan.md  roadmap_v1.md  tech_debt.md  v0_2_0_plan.md  v0_3_0_plan.md
docs/product/: cli_spec.md  scope.md  vision.md
docs/query_language/: ast.md  examples.md  grammar.md  semantics.md
docs/releases/: v0.2.0.md  v0.3.0.md
hack/minikube/: fixtures.yaml  namespaces.yaml
hack/minikube/crds/: widgets.demo.kql.io.yaml
scripts/: automation-smoke.sh  docs-check.sh  hygiene-smoke.sh  minikube-down.sh  minikube-reset-data.sh  minikube-up.sh  verify.sh
scripts/git/: feature.sh  push.sh  ship.sh  sync_master.sh
scripts/pr/: generate_pr.sh
src/: dynamic_object.rs  error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/engine/: mod.rs
src/k8s/: mod.rs  planner.rs
src/output/: mod.rs
src/parser/: mod.rs
src/path/: mod.rs
tests/: e2e_minikube.rs
