[package]
name = "kubiq"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
k8s-openapi = { version = "0.24", features = ["v1_30"] }
kube = { version = "0.98", features = ["client", "derive", "runtime", "rustls-tls", "http-proxy"] }
nom = "7"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
